# BlueshiftEngine

./: .editorconfig  .gitignore  .gitmodules  Build-Android.bat  Build-Android.md  Build-Sample.md  Build-Win64-Editor.bat  Build-Win64.bat  Build-iOS.command  Build-macOS-Editor.command  Build-macOS.command  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Copy-EngineData.bat  Copy-EngineData.sh  Debugging-Tips-For-Mobile-Platform.txt  LICENSE  LICENSE.md  Lua-Debugging.txt  README.md  Xamarin-Based-Build.md  appveyor.yml  cmake-vs2015-Win64-Editor.bat  cmake-vs2015-XamarinWin64.bat  cmake-vs2017-Win64-All.bat  cmake-vs2017-Win64-Editor.bat  cmake-vs2017-Win64.bat  cmake-vs2017-XamarinAndroid.bat  cmake-vs2019-Win64-All.bat  cmake-vs2019-Win64-Editor.bat  cmake-vs2019-Win64.bat  cmake-vs2022-Win64-All.bat  cmake-vs2022-Win64-Editor.bat  cmake-vs2022-Win64.bat  cmake-xcode-XamarinIOS.command  cmake-xcode-XamarinIOS_d.command  cmake-xcode-iOS-All.command  cmake-xcode-iOS.command  cmake-xcode-macOS-All.command  (+5 more)
Engine/: .gitignore  CMakeLists.txt  cmake-vs2015-Android.bat  cmake-vs2015-Win64-All.bat  cmake-vs2015-Win64-Editor.bat  cmake-vs2015-Win64-Test.bat  cmake-vs2015-Win64.bat  cmake-vs2015-XamarinAndroid.bat  cmake-vs2015-XamarinWin64.bat  cmake-vs2017-Android.bat  cmake-vs2017-Win64-All.bat  cmake-vs2017-Win64-Editor.bat  cmake-vs2017-Win64.bat  cmake-xcode-iOS.command  cmake-xcode-macOS-All-LuaJIT.command  cmake-xcode-macOS-Editor.command  cmake-xcode-macOS-Test.command  cmake-xcode-macOS.command
Engine/CMake/: Android.toolchain.cmake  BlueshiftCommon.cmake  FindEGL.cmake  FindFBX.cmake  FindLuaJIT.cmake  FindOpenAL.cmake  FindOpenGLES3.cmake  iOS.toolchain.cmake
Engine/Config/: android.cfg  config.cfg  ios.cfg  juhl.cfg
Engine/Data/EngineFonts/: Lucida Console12_image0.tga
Engine/Data/EngineMeshes/: sphere.fbx
Engine/Data/EngineTextures/: DetailNormalMap.dds
Engine/Documents/: Generate-Documents.bat  Generate-Documents.sh
Engine/Project/Android/: AndroidPlayer.sln
Engine/Project/Android/AndroidPlayer/: .project  AndroidPlayer.sln  AndroidPlayer.vcxproj  AndroidPlayer.vcxproj.filters  build.xml  secure_properties.xml
Engine/Project/Android/BlueshiftEngine/: BlueshiftEngine.vcxproj  BlueshiftEngine.vcxproj.filters  pch.h
Engine/Project/Android/Etc2CompLib/: Etc2CompLib.cpp  Etc2CompLib.vcxproj
Engine/Project/Android/NvTriStrip/: NvTriStrip.cpp  NvTriStrip.vcxproj
Engine/Project/Android/etcpack_lib/: etcpack_lib.vcxproj  etcpack_lib.vcxproj.filters
Engine/Project/Android/freetype/: freetype.vcxproj.filters
Engine/Project/Android/jsoncpp/: jsoncpp.vcxproj
Engine/Project/JavaAndroid/: JavaAndroid.sln
Engine/Project/NativeAndroid/: AndroidPlayer.sln  README.md
Engine/Project/XamarinAndroid/: .gitignore  AndroidPlayer.sln  README.md  XamarinPlayer.sln
Engine/Project/XamarinIOS/: README.md  XamarinPlayer.sln
Engine/Project/XamarinOSX/: XamarinControl.sln
Engine/Project/XamarinWin/: .gitignore  README.md
Engine/Scripts/: mobdebug.lua  mobdebug_controller.lua  serializer.lua  vscode_debuggee_controller.lua
Engine/Scripts/debug/: debug.lua
Engine/Shaders/: BRDF.glsl  BRDFLibrary.glsl  CMakeLists.txt  Forward.shader  ForwardAmbientLit.shader  ForwardAmbientLitDirectLit.shader  ForwardCore.fp  ForwardCore.vp  ForwardDirectLit.shader  GenBRDFIntegrationLUT.shader  GenDiffuseCubeMap.shader  GenDiffuseCubeMapSHConvolv.shader  GenDiffuseIrradianceCubeMap.shader  GenDiffuseIrradianceCubeMapSHConvolv.shader  GenGGXIntegrationLUT.shader  GenGGXSpecularPrefilteredCubeMap.shader  GenIrradianceEnvCubeMap.shader  GenPhongSpecularPrefilteredCubeMap.shader  GenPhongSpecularPrefilteredEnvCubeMap.shader  GenSpecularIrradianceCubeMap.shader  HDRFinal.shader  IBL.glsl  Lighting.glsl  LightingConfig.glsl  LightingPhong.glsl  LightingStandard.glsl  Phong.shader  PhongAmbientLit.shader  PhongAmbientLitDirectLit.shader  PhongDirectLit.shader  PhongLighting.glsl  SH_evalIrradianceCubeMap.shader  SH_projection.shader  SSAO.shader  ShadowLibrary.fp  Simple.fp  Simple.shader  Simple.vp  SkinningMatrix4.glsl  SkyboxCubemap.fp  (+70 more)
Engine/Source/BlueshiftEngine/: CMakeLists.txt  Precompiled.h  Version.h
Engine/Source/BlueshiftPlayer/: AndroidMain.cpp  Application.cpp  Application.h  CMakeLists.txt  WinMain.cpp  WinResource.h  XamarinIOSMain.cpp  iOSAdMob.h  iOSAdMob.mm  iOSDevice.h  iOSDevice.mm  iOSMain.mm  iOSplist.in  macOSMain.mm
Engine/Source/TestBase/: CMakeLists.txt  CUDA.h  CUDA_kernels.cu  Main.cpp  TestCUDA.cpp  TestCUDA.h  TestContainer.cpp  TestContainer.h  TestLua.cpp  TestLua.h  TestMath.cpp  TestMath.h  TestSIMD.cpp  TestSIMD.h
Engine/Source/TestRenderer/: AndroidMain.cpp  Application.cpp  Application.h  CMakeLists.txt  WinMain.cpp  WinResource.h  iOSMain.mm  iOSplist.in  macOSMain.mm  macOSplist.in
Engine/Source/libControl/: CMakeLists.txt  Control.cpp  Precompiled.h
Project/Android/HACD/: CMakeLists.txt  HACD.vcxproj  HACD.vcxproj.filters
Project/Android/freetype/: CMakeLists.txt  freetype.vcxproj
Project/Android/jsoncpp/: CMakeLists.txt  jsoncpp.vcxproj.filters
Project/Android/libpvrt/: CMakeLists.txt  libpvrt.vcxproj
Project/Android/minizip/: CMakeLists.txt
Source/BlueshiftEngine/: CMakeLists.txt  Precompiled.h  Version.h  Version.h.in
Source/BlueshiftEngine/Public/: BlueshiftEngine.h
Source/Player/: AndroidAdMob.cpp  AndroidAdMob.h  AndroidAnalytics.cpp  AndroidAnalytics.h  AndroidMain.cpp  Application.cpp  Application.h  CMakeLists.txt  WinMain.cpp  iOSAdMob.h  iOSAdMob.mm  iOSAnalytics.h  iOSAnalytics.mm  iOSMain.mm  macOSMain.mm
Source/Player/Android/: AndroidManifest.xml
Source/Player/Binding/: XMCustomView.h  XMCustomView.m
Source/Player/WinRes/: player.rc
Source/TestBase/: CMakeLists.txt  CUDA.cpp  CUDA_kernels.cuh  Main.cpp  TestCUDA.cpp  TestCUDA.h  TestContainer.cpp  TestContainer.h  TestLua.cpp  TestLua.h  TestMath.cpp  TestMath.h  TestRValue.cpp  TestRValue.h  TestSIMD.cpp  TestSIMD.h  TestTask.cpp  TestTask.h  TestThread.cpp  TestThread.h
Source/libControl/: CMakeLists.txt  Client.cpp  Client.h  Protocol.h
(+2585 files in other folders)
